2000-04-25  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10908: Completion/Base/.distfiles, Completion/Base/_argument_sets,
 	Completion/Base/_arguments, Completion/Base/_describe,
 	Completion/Builtins/_bindkey, Completion/Builtins/_compdef,
 	Completion/Builtins/_emulate, Completion/Builtins/_zpty,
 	Completion/Core/_tags, Doc/Zsh/compsys.yo,
 	Etc/completion-style-guide, Src/Zle/computil.c: make _arguments
 	use more than one action when appropriate; add _argument_sets to
 	complete different sets of arguments and options for the same command
	
2000-04-24  Bart Schaefer  <schaefer@zsh.org>

	* 10900: Src/Makefile.in: Replace a dependency on Makefile with a
	more accurate dependency on config.status.

2000-04-20  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10881: Functions/Misc/zrecompile: don't remove *all* .zwc files,
 	keep the first one
	
	* 10868: Src/Zle/complist.c: fix off-by-one error in scrolled
 	menu-selections
	
	* 10861: Completion/Bsd/.distfiles, Completion/Bsd/_bsd_pkg,
 	Completion/Bsd/_cvsup, Completion/Bsd/_kld: new completions for
 	FreeBSD commands
	
	* 10854: Completion/Commands/_expand_word, Completion/Core/_expand,
 	Doc/Zsh/compsys.yo: default values for styles in _expand_word,
 	listing expansions with ^Xd, _expand uses add-space style
	
2000-04-20  Oliver Kiddle  <opk@zsh.org>

	* 10857: Completion/AIX/.distfiles Completion/AIX/_floppy
	Completion/AIX/_lsdev Completion/AIX/_lslv Completion/AIX/_lspv
	Completion/AIX/_lsvg Completion/AIX/_physical_volumes
	Completion/AIX/_smit Completion/AIX/_volume_groups: new completions
	for AIX commands

	* 10848: Completion/Builtins/_print, Completion/Core/.distfiles,
	Completion/Core/_file_descriptors: Add completion for file
	descriptors

2000-04-19  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Config/version.mk: 3.1.7-pre-1

	* Functions/Misc/.distfiles: add zstyle+.

	* Test/.distfiles, Test/12procsubst.ztst, Test/13parameter.ztst,