@@ -1,5 +1,9 @@
 2000-04-25  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>
 
+	* 10909: Completion/Core/_expand, Src/Zle/compcore.c,
+ 	Src/Zle/compresult.c: report prefix/suffix of parameter expansion
+ 	in IPREFIX/ISUFFIX; make _expand use them to be able to expand $foo
+	
 	* 10908: Completion/Base/.distfiles, Completion/Base/_argument_sets,
  	Completion/Base/_arguments, Completion/Base/_describe,
  	Completion/Builtins/_bindkey, Completion/Builtins/_compdef,
